openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ci-dashboard
  annotations:
    haproxy.router.openshift.io/timeout: 120s
  labels:
    app: ci-dashboard
    paas.redhat.com/appcode: ISVD-001
    shard: internal
spec:
  to:
    kind: Service
    name: ci-dashboard
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
